--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ lab/*/.ok_storage
 hw/*/__pycache__
 hw/*/.ok_history
 hw/*/.ok_storage
+
+projects/*/__pycache__
+projects/hog/gui_files/__pycache__
+projects/*/tests/__pycache__
+
+projects/hog/.ok_history
+projects/hog/.ok_storage
