--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ projects/*/tests/__pycache__
 
 projects/hog/.ok_history
 projects/hog/.ok_storage
+projects/cats/.ok_history
+projects/cats/.ok_storage
+projects/cats/multiplayer/__pycache__
