--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ projects/hog/.ok_storage
 projects/cats/.ok_history
 projects/cats/.ok_storage
 projects/cats/multiplayer/__pycache__
+
+lab/lab10/editor/__pycache__
+lab/lab10/editor/libraries/__pycache__
