--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ projects/cats/multiplayer/__pycache__
 
 lab/lab10/editor/__pycache__
 lab/lab10/editor/libraries/__pycache__
+hw/hw07/editor/__pycache__
+hw/hw07/editor/libraries/__pycache__
