--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ lab/lab10/editor/__pycache__
 lab/lab10/editor/libraries/__pycache__
 hw/hw07/editor/__pycache__
 hw/hw07/editor/libraries/__pycache__
+hw/hw08/editor/__pycache__
+hw/hw08/editor/libraries/__pycache__
